feat: google sheets successfully connect

--- a/client/index.html
+++ b/client/index.html
@@ -70,12 +70,15 @@
                 </div>
                 <div class="two-buttons">
                   <button type="button" class="prev-btn">Previous</button>
-                  <button type="submit">Submit</button>
+                  <button type="submit" id="submitbtn">Submit</button>
                 </div>
             </div>
         </form>
-        <div id="formattedAddress"></div>
+      <div id="loading-container">
+        <div class="loader"></div>
+      </div>
     </div>
     <script src="src/function.js" type="module"></script>
+    <div id="toast-container"></div>
 </body>
 </html>
